// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-cTkOiY fgQua-D"
  >
    <div
      className="Carousel__CarouselWrapper-xel9ev-0 dIVKCL"
    >
      <ul
        className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 fcarpj kMmwHJ"
      >
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            0
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            1
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            2
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            3
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            4
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            5
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            6
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            7
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            8
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            9
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            10
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            11
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            12
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            13
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            14
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            15
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            16
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            17
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            18
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            19
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            20
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            21
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            22
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            23
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
        >
          <div
            className="sc-bWNSNh gueSIK"
          >
            24
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex justify-around items-center w-full"
  >
    <div
      className="sc-fvFlmW hBdWHk"
    >
      <div
        className="Carousel__CarouselWrapper-xel9ev-0 dIVKCL"
      >
        <ul
          className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 fcarpj kMmwHJ"
        >
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              24
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              23
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              22
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              21
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              20
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              19
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              18
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              17
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              16
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              15
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              14
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              13
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              12
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              11
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              10
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              9
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              8
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              7
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              6
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              5
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              4
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              3
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              2
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              1
            </div>
          </li>
          <li
            className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
          >
            <div
              className="sc-ezipRf bSbVnC"
            >
              0
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="Carousel__CarouselWrapper-xel9ev-0 dIVKCL"
  >
    <ul
      className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 krBxWn kMmwHJ"
    >
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-cqtpGg jhuyRQ"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-cqtpGg jhuyRQ"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-cqtpGg jhuyRQ"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-cqtpGg jhuyRQ"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-cqtpGg jhuyRQ"
        >
          -1
          , 
          -1
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="Carousel__CarouselWrapper-xel9ev-0 dIVKCL"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to left
    </button>
    <ul
      className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 fcarpj kMmwHJ"
    >
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          0
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          2
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          3
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          4
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          5
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          6
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          7
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          8
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          9
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          10
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          11
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          12
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          13
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          14
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          15
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          16
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          17
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          18
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          19
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          20
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          21
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          22
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          23
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-jdPOdc kbiycE"
        >
          24
        </div>
      </li>
    </ul>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to Right
    </button>
  </div>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="Carousel__CarouselWrapper-xel9ev-0 dIVKCL"
  >
    <ul
      className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 krBxWn kMmwHJ"
    >
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          0
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          2
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          3
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 OGvTW"
      >
        <div
          className="sc-ihsSHl jSkYGv"
        >
          4
        </div>
      </li>
    </ul>
  </div>
</div>
`;
